--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "license": "MIT",
   "homepage": "https://github.com/kaironferreira/converttoapppoui",
-  "icon": "assets/logo/logo-app.png",
+  "icon": "assets/icons/logo-app.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/kaironferreira/converttoapppoui.git"
